Estrutra praticamente completa (falta imagens)

--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -37,15 +37,15 @@ html {
 }
 
 ::-moz-selection {
-  background-color: #fdf0b2;
+  background-color: #bfbfbf;
 }
 
 ::-webkit-selection {
-  background-color: #fdf0b2;
+  background-color: #bfbfbf;
 }
 
 ::selection {
-  background-color: #fdf0b2;
+  background-color: #bfbfbf;
 }
 
 :focus {
