--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,18 +1,18 @@
 // Colors
 $text-color: #868686;
-$heading-color: #222222;
-$bg-light: #f9f9f9;
-$bg-dark: #181818;
+$heading-color: #292f2d;
+$bg-light: #f2f1f0;
+$bg-dark: #292f2d;
 $border-color: #e5e5e5;
 $border-color-dark: #313131;
-$main-color: #ffb31a;
+$main-color: #6bc3c9;
 $secondary-color: #2f95ef;
 $meta-color: #9e9e9e;
 
 
 // Fonts
-$body-font: 'Open Sans', sans-serif;
-$heading-font: 'Barlow', sans-serif;
+$body-font: 'Montserrat', sans-serif;
+$heading-font: 'Poppins', sans-serif;
 
 
 // Navbar
