--- a/sass/layout/_elements.scss
+++ b/sass/layout/_elements.scss
@@ -11,7 +11,7 @@
   border: 0;
   border-radius: 30px;
   @include transition(all .2s ease-in-out);
-  color: #000;
+  color: #f2f1f0;
   background-color: $main-color;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -108,6 +108,75 @@
     margin-left: 40px;
     line-height: 1;
   }
+}
+#btn-orcamento{
+  padding: 12px 32px;
+  &:hover{
+    color: white;
+  }
+  &:focus{
+    color: white;
+  }
+}
+
+@media (max-width:992px){
+
+  .logo{
+    width: 55%;
+  }
+  .dropdown{
+    margin-left: auto;
+  }
+  #btn-orcamento-desktop{
+    display: none;
+  }
+
+  #btn-orcamento-mobile{
+    margin-top: 20px;
+  }
+}
+
+@media (min-width:992px){
+  #btn-orcamento-mobile{
+    display: none;
+  }
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 10px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: $main-color;
 }
 
 .rounded,
